Identified and resolved spacing override

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -268,11 +268,17 @@ footer.bg-dark.text-white {
         left: 0;
         z-index: 1030;
     }
+    .mt-5, .my-5 {
+        margin-top: 6rem !important;
+    }
     .container .content-wrapper {
         padding-top: 164px !important;
     }
 }
 @media (max-width: 991px) {
+    .mt-5, .my-5 {
+        margin-top: 6rem !important;
+    }
     .container .content-wrapper {
         padding-top: 116px !important;
     }
